# microtools-rs

./: .gitignore  Cargo.toml  Jenkinsfile  LICENSE  README.md  rustfmt.toml
legacy/: parse_request.rs
src/: auth_middleware.rs  business_result.rs  elasticsearch.rs  elasticsearch_test.rs  gatekeeper.rs  lib.rs  logging_slog.rs  metrics.rs  parse_request.rs  problem.rs  retry.rs  retry_tests.rs  serde_field_value.rs  service_requester.rs  service_requester_test.rs  status.rs  subject.rs  types.rs  ws_try.rs
