[package]
name = "microtools"
version = "0.1.0"
authors = ["Bodo Junglas <junglas@objectcode.de>"]
edition = "2018"

[dependencies]
actix = "0.7"
actix-web = "0.7"
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
serde_json = "1.0"
futures = "0.1"
toml = { version = "0.4", optional = true }
log = "0.4"
bytes = "0.4.10"
prometheus = { version = "0.5", features = ["process"] }
chrono = { version = "0.4", features = ["serde"], optional = true }
slog = { version = "2.4", optional = true }
slog-envlogger = { version = "2.1", optional = true }
slog-async = { version = "2.3", optional = true }
slog-json = { version = "2.2", optional = true }
slog-stdlog = { version = "3.0", optional = true }
slog-scope = { version = "4.0", optional = true }
r2d2 = { version = "0.8", optional = true }
diesel = { version = "1.3", optional = true }
url = { version = "1.7", features = ["query_encoding"] }
reqwest = { version = "0.9", optional = true }

[dev-dependencies]
spectral = "0.6"

[features]
with-toml = ["toml"]
with-slog = ["slog", "slog-envlogger", "slog-async", "slog-json", "slog-stdlog", "slog-scope", "chrono"]
with-diesel = ["r2d2", "diesel"]
with-reqwest = ["reqwest"]