[package]
name = "microtools"
version = "0.1.0"
authors = ["Bodo Junglas <junglas@objectcode.de>", "Ihor Mordashev <ihor.mordashev@21re.de"]
edition = "2018"

[dependencies]
actix = "0.9"
actix-web = "2"
awc = "1"
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
serde_json = "1.0"
futures = "0.3"

toml = { version = "0.4", optional = true }
log = "0.4"
bytes = "0.5"
prometheus = { version = "0.5", features = ["process"] }
chrono = { version = "0.4", features = ["serde"], optional = true }
slog = { version = "2.5", optional = true }
slog-envlogger = { version = "2.2", optional = true }
slog-async = { version = "2.5", optional = true }
slog-json = { version = "2.3", optional = true }
slog-stdlog = { version = "4.0", optional = true }
slog-scope = { version = "4.3", optional = true }
r2d2 = { version = "0.8", optional = true }
diesel = { version = "1.3", optional = true }
url = { version = "2" }
reqwest = { version = "0.10", features = ["json", "stream"] }
config = { version = "0.9", optional = true }

[dev-dependencies]
spectral = "0.6"

[features]
with-toml = ["toml"]
with-slog = ["slog", "slog-envlogger", "slog-async", "slog-json", "slog-stdlog", "slog-scope", "chrono"]
with-diesel = ["r2d2", "diesel"]
with-config = ["config"]
