[package]
name = "microtools"
version = "0.6.0"
authors = ["Bodo Junglas <junglas@objectcode.de>", "Ihor Mordashev <ihor.mordashev@21re.de", "Andrew Ward <andrew.ward@21re.de>"]
edition = "2021"
rust-version = "1.70.0"

[dependencies]
actix = "0.13.0"
actix-web = { version = "4.3.1", features = ["rustls", "compress-gzip", "cookies", "macros"], default-features = false }
awc = "3.1.1"
serde = { version = "1.0.164", features = ["rc"] }
serde_derive = "1.0.164"
serde_json = "1.0.97"
futures = "0.3.28"

toml = { version = "0.7.4", optional = true }
log = "0.4.19"
bytes = "1.4.0"
prometheus = { version = "0.13.3", features = ["process"] }
chrono = { version = "0.4.26", features = ["serde"], optional = true }
slog = { version = "2.7.0", optional = true }
slog-envlogger = { version = "2.2.0", optional = true }
slog-async = { version = "2.7.0", optional = true }
slog-json = { version = "2.6.1", optional = true }
slog-stdlog = { version = "4.1.1", optional = true }
slog-scope = { version = "4.4.0", optional = true }
r2d2 = { version = "0.8.10", optional = true }
diesel = { version = "2.1.0", optional = true }
url = { version = "2.4.0" }
reqwest = { version = "0.11.18", features = ["json", "stream"] }
config = { version = "0.13.3", optional = true }
openssl = "0.10.55"

[dev-dependencies]
spectral = "0.6.0"

[features]
with-toml = ["toml"]
with-slog = ["slog", "slog-envlogger", "slog-async", "slog-json", "slog-stdlog", "slog-scope", "chrono"]
with-diesel = ["r2d2", "diesel"]
with-config = ["config"]
